fix: 修复 BFF 编译错误 + JWT 优化测试适配 + Surefire 编码配置
- 删 AdminOrderController 重复退货方法段
- 补 IndexNoticeFeignClient findById + import
- 补 CategoryFeignClient searchByTree
- 补 ProductViewRecordFeignClient CRUD
- 6 个 client pom 加 spring-boot-maven-plugin skip
- 适配 UserServiceCancelAccountTest（MockedStatic）
- 适配 AuthHandshakeInterceptorTest（构造参数变更）
- 适配 MessagePushServiceTest（安全上下文）
- 父 pom surefire 加 argLine UTF-8 避免 Windows GBK 编码问题